--- a/Mathmachine.ipynb
+++ b/Mathmachine.ipynb
@@ -134,30 +134,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16\n",
-      "18\n",
-      "16\n"
-     ]
-    }
-   ],
-   "source": [
-    "asd = FeralWarpwolf()\n",
-    "print(asd.armor())\n",
-    "asd.protective_plates(True)\n",
-    "print(asd.armor())\n",
-    "asd.protective_plates(False)\n",
-    "print(asd.armor())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# functions\n",
@@ -168,49 +144,77 @@
     "    return rd.randint(num,6)\n",
     "\n",
     "\n",
-    "def game_roll(bonus=0,boosted='No'):\n",
-    "    \"\"\"Roll 2d6. Should be usable for ranged and melee attacks as well as damage.\"\"\"\n",
-    "       \n",
-    "    first_result = roll_d6()\n",
-    "    second_result = roll_d6()\n",
-    "    total_result = first_result + second_result + bonus\n",
-    "    if boosted == 'Yes':\n",
-    "         total_result = total_result + roll_d6()\n",
-    "    special = ''\n",
+    "def melee_attack_roll(model, target, boosted=False):\n",
+    "    \"\"\"Roll and calculate a melee attack.\n",
     "    \n",
+    "    model: the attacking model\n",
+    "    target: the defending model\n",
+    "    boosted: is the attack boosted\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # roll first die\n",
+    "    first_result = roll_d6()\n",
+    "    \n",
+    "    # roll second die\n",
+    "    if model.mind_disabled:\n",
+    "        second_result = 0\n",
+    "    else:\n",
+    "        second_result = roll_d6()\n",
+    "    \n",
+    "    # roll boost die\n",
+    "    if boosted:\n",
+    "         boost = roll_d6()\n",
+    "    else:\n",
+    "        boost = 0\n",
+    "    \n",
+    "    # calculate mat + dice total\n",
+    "    total_result = model.mat + first_result + second_result + boost\n",
+    "    \n",
+    "    # check for crit or failure\n",
     "    if first_result == 1 and second_result == 1:\n",
     "        special = 'Failure!'\n",
     "    elif first_result==second_result:\n",
     "        special = 'Crit!'\n",
     "    \n",
-    "    # print(total_result, '(', first_result, '+', second_result, ')', special)\n",
-    "    \n",
-    "    return total_result\n",
-    "\n",
-    "\n",
-    "def melee_attack_roll(mat, defense, boosted='No'):\n",
-    "    result = game_roll(mat, boosted)\n",
-    "    \n",
-    "    if result >= defense:\n",
-    "        # print('Hit!')\n",
+    "    # calculate hit\n",
+    "    if total_result >= target.defense:\n",
     "        return 'Hit!'\n",
     "    else:\n",
-    "        # print('Miss!')\n",
-    "        return 'Miss!'\n",
+    "        return 'Miss!' \n",
     "\n",
     "    \n",
-    "def damage_roll(ps, armor, boosted='No'):\n",
-    "    result = game_roll(ps, boosted)\n",
+    "def damage_roll(model, target, powstr, boosted=False):\n",
+    "    \"\"\"Roll and calculate damage.\n",
     "    \n",
-    "#     print('Result:', type(result))\n",
-    "#     print('Armor:', type(armor))\n",
+    "    powstr: the power+strength of the attacking model\n",
+    "    target: the defending model\n",
+    "    boosted: is the damage boosted\n",
+    "    \"\"\"\n",
     "    \n",
-    "    if result > armor:\n",
-    "        damage = result - armor\n",
+    "    # roll first die\n",
+    "    first_result = roll_d6()\n",
+    "    \n",
+    "    # roll second die\n",
+    "    if model.body_disabled:\n",
+    "        second_result = 0\n",
+    "    else:\n",
+    "        second_result = roll_d6()\n",
+    "    \n",
+    "    # roll boost die\n",
+    "    if boosted:\n",
+    "         boost = roll_d6()\n",
+    "    else:\n",
+    "        boost = 0\n",
+    "    \n",
+    "    # calculate power+strength + dice total\n",
+    "    total_result = powstr + first_result + second_result + boost\n",
+    "    \n",
+    "    # calculate damage\n",
+    "    if total_result > target.armor():\n",
+    "        damage = total_result - target.armor()\n",
     "    else:\n",
     "        damage = 0\n",
     "    \n",
-    "    # print(damage)\n",
     "    return damage\n",
     "\n",
     "\n",
@@ -230,14 +234,12 @@
     "    \n",
     "    for weapon, values in attacker.weapons.items():\n",
     "        for attacks in range(values['rof']):\n",
-    "            result = melee_attack_roll(attacker.mat, defender.defense)\n",
-    "#             print(weapon, result)\n",
+    "            result = melee_attack_roll(attacker, defender)\n",
     "            \n",
     "            if result == 'Hit!':\n",
-    "                damage = damage_roll(values['p+s'], defender.armor())\n",
+    "                damage = damage_roll(attacker, defender, values['p+s'])\n",
     "                defender.hp = defender.hp - damage\n",
     "                log['Total Damage'] += damage\n",
-    "#                 print('Damage:', damage, 'HP:', defender.hp)\n",
     "            else:\n",
     "                continue\n",
     "            \n",
@@ -255,7 +257,7 @@
     "    \n",
     "    x = []\n",
     "    \n",
-    "    for _ in range(10000):\n",
+    "    for _ in range(num_of_tests):\n",
     "        a = copy.copy(attacker)\n",
     "        d = copy.copy(defender)\n",
     "    \n",
@@ -264,7 +266,8 @@
     "            'Total Damage': 0\n",
     "        }\n",
     "        \n",
-    "        while not is_dead(d):\n",
+    "        # stop after the target is dead or 10 rounds have passed\n",
+    "        while not is_dead(d) and log['Rounds'] < 10:\n",
     "            log['Rounds'] += 1\n",
     "            log['Total Damage'] += initial_melee_attacks(a,d)['Total Damage']\n",
     "            \n",
@@ -278,7 +281,7 @@
     "    \n",
     "    x = []\n",
     "    \n",
-    "    for _ in range(10):\n",
+    "    for _ in range(num_of_tests):\n",
     "        a = copy.copy(attacker)\n",
     "        d = copy.copy(defender)\n",
     "        \n",
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,23 +318,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Damage per round': 9.8, 'Rounds to kill': 3.6434}\n",
-      "{'Damage per round': 9.9, 'Rounds to kill': 3.6581}\n"
+      "{'Damage per round': 3.8961, 'Rounds to kill': 8.0805}\n",
+      "{'Damage per round': 9.8939, 'Rounds to kill': 3.6499}\n"
      ]
     }
    ],
    "source": [
     "# laboratory\n",
+    "num_of_tests = 10000\n",
     "\n",
     "x = FeralWarpwolf(str_buff=0, mat_buff=0)\n",
     "y = FeralWarpwolf(str_buff=0, mat_buff=0)\n",
+    "\n",
+    "x.mind_disabled=False\n",
+    "x.body_disabled=False\n",
     "\n",
     "xy = standard_output(x,y)\n",
     "yx = standard_output(y,x)\n",
@@ -342,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
